--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,38 @@
   "name": "Foodie - AI Recipe Generator",
   "short_name": "Foodie",
   "description": "Generate personalized recipes with AI based on your fridge items and dietary preferences",
-  "start_url": "/",
+  "start_url": "/foodie/",
+  "scope": "/foodie/",
+  "id": "/foodie/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#10b981",
   "orientation": "portrait-primary",
+  "categories": ["food", "lifestyle", "productivity"],
   "icons": [
     {
-      "src": "assets/icons/icon-192x192.svg",
+      "src": "/foodie/assets/icons/icon-192x192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "assets/icons/icon-512x512.svg",
+      "src": "/foodie/assets/icons/icon-192x192.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/foodie/assets/icons/icon-512x512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/foodie/assets/icons/icon-512x512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ]
 }
